# signinum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  NOTICES.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  typos.toml
crates/ashlar-cli/: Cargo.toml
crates/ashlar-cli/src/: main.rs
crates/ashlar-core/: Cargo.toml
crates/ashlar-core/src/: backend.rs  lib.rs  traits.rs
crates/ashlar-core/tests/: api.rs  repo_integrity.rs
crates/ashlar-j2k/: Cargo.toml
crates/ashlar-j2k-compare/: Cargo.toml  build.rs
crates/ashlar-j2k-compare/src/: grok.rs  grok_shim.c  openjpeg.rs
crates/ashlar-j2k-cuda/: Cargo.toml
crates/ashlar-j2k-cuda/src/: lib.rs
crates/ashlar-j2k-cuda/tests/: host_surface.rs
crates/ashlar-j2k-metal/: Cargo.toml
crates/ashlar-j2k-metal/benches/: compare.rs  device_upload.rs
crates/ashlar-j2k-metal/src/: batch.rs  classic.rs  compute.rs  direct.rs  ht.rs  idwt.rs  lib.rs  mct.rs  store.metal  store.rs
crates/ashlar-j2k-metal/tests/: device.rs
crates/ashlar-j2k-native/: Cargo.toml
crates/ashlar-j2k-native/src/: direct_plan.rs  lib.rs
crates/ashlar-j2k-native/tests/: component_planes.rs
crates/ashlar-j2k/examples/: decode_generated.rs
crates/ashlar-j2k/fuzz/: Cargo.toml
crates/ashlar-j2k/src/: backend.rs  context.rs  decode.rs  error.rs  lib.rs  scratch.rs  view.rs
crates/ashlar-j2k/tests/: decode.rs  device_plan.rs  grok_parity.rs  in_process_parity.rs  inspect.rs  openjpeg_parity.rs  proptest_inspect.rs
crates/ashlar-jpeg/: Cargo.toml  README.md
crates/ashlar-jpeg-cuda/: Cargo.toml
crates/ashlar-jpeg-cuda/src/: lib.rs
crates/ashlar-jpeg-cuda/tests/: host_surface.rs
crates/ashlar-jpeg-metal/: Cargo.toml
crates/ashlar-jpeg-metal/benches/: compare.rs  device_upload.rs
crates/ashlar-jpeg-metal/src/: batch.rs  compute.rs  lib.rs  session.rs  viewport.rs
crates/ashlar-jpeg-metal/tests/: batch.rs  core_traits.rs  viewport.rs
crates/ashlar-jpeg/benches/: compare.rs  corpus_report.rs  micro.rs
crates/ashlar-jpeg/examples/: decode_region.rs  inspect.rs
crates/ashlar-jpeg/fuzz/: Cargo.toml
crates/ashlar-jpeg/src/: bench_support.rs  context.rs  decoder.rs  error.rs  lib.rs  segment.rs
crates/ashlar-jpeg/tests/: batch.rs  component_rows.rs  core_traits.rs  decode_into.rs  device_plan.rs  external_wsi.rs  idct_parity.rs  inspect.rs  libjpeg_turbo_compare.rs  metal_fast420_packet.rs  neon_hot_paths.rs  parse_errors.rs  regressions.rs  scratch_reuse.rs  view_and_rows.rs  wsi_parity.rs
crates/signinum/: Cargo.toml  README.md
crates/signinum-cli/: Cargo.toml  README.md
crates/signinum-cli/src/: main.rs
crates/signinum-cli/tests/: inspect_cli.rs
crates/signinum-core/: Cargo.toml  README.md
crates/signinum-core/src/: backend.rs  buffer.rs  context.rs  error.rs  lib.rs  passthrough.rs  row_sink.rs  scale.rs  traits.rs  types.rs
crates/signinum-core/tests/: api.rs  repo_integrity.rs
crates/signinum-cuda-runtime/: Cargo.toml  README.md  build.rs
crates/signinum-cuda-runtime/src/: j2k_encode_kernels.cu  j2k_encode_kernels.ptx  kernels.rs  lib.rs  nvjpeg.rs
crates/signinum-j2k/: Cargo.toml  README.md
crates/signinum-j2k-compare/: Cargo.toml  build.rs
crates/signinum-j2k-compare/src/: grok.rs  grok_shim.c  openjpeg.rs
crates/signinum-j2k-compare/tests/: bench_harness.rs  in_process_parity.rs
crates/signinum-j2k-cuda/: Cargo.toml  README.md
crates/signinum-j2k-cuda/benches/: encode_stages.rs
crates/signinum-j2k-cuda/src/: lib.rs  profile.rs
crates/signinum-j2k-cuda/tests/: host_surface.rs
crates/signinum-j2k-metal/: Cargo.toml  README.md
crates/signinum-j2k-metal/benches/: compare.rs  device_upload.rs  encode_stages.rs
crates/signinum-j2k-metal/src/: batch.rs  classic.rs  compute.rs  direct.rs  encode.rs  encode_bitstream.metal  ht.rs  ht_cleanup.metal  idwt.metal  idwt.rs  lib.rs  mct.metal  mct.rs  profile.rs  routing.rs  store.rs
crates/signinum-j2k-metal/tests/: bench_harness.rs  device.rs
crates/signinum-j2k-native/: Cargo.toml  README.md
crates/signinum-j2k-native/benches/: direct_cpu.rs  htj2k_sigprop_phase.rs  tier1_bitplane.rs
crates/signinum-j2k-native/src/: direct_cpu.rs  lib.rs  math.rs
crates/signinum-j2k-native/tests/: bench_harness.rs  component_planes.rs
crates/signinum-j2k/benches/: public_api.rs
crates/signinum-j2k/examples/: decode_generated.rs
crates/signinum-j2k/fuzz/: Cargo.toml
crates/signinum-j2k/src/: backend.rs  batch.rs  context.rs  decode.rs  encode.rs  error.rs  lib.rs  scratch.rs  view.rs
crates/signinum-j2k/tests/: batch.rs  bench_harness.rs  decode.rs  device_plan.rs  encode_lossless.rs  grok_parity.rs  inspect.rs  openjpeg_parity.rs  proptest_inspect.rs
crates/signinum-jpeg-cuda/: Cargo.toml  README.md
crates/signinum-jpeg-cuda/benches/: device_decode.rs
crates/signinum-jpeg-cuda/src/: lib.rs  profile.rs
crates/signinum-jpeg-cuda/tests/: host_surface.rs
crates/signinum-jpeg-metal/: Cargo.toml  README.md
crates/signinum-jpeg-metal/benches/: compare.rs  device_upload.rs  encode_baseline.rs
crates/signinum-jpeg-metal/src/: batch.rs  compute.rs  encode.rs  lib.rs  profile.rs  routing.rs  session.rs  shaders.metal  viewport.rs
crates/signinum-jpeg-metal/tests/: batch.rs  core_traits.rs  encode.rs  shader_integrity.rs  viewport.rs
crates/signinum-profile/: Cargo.toml  README.md
crates/signinum-profile/src/: lib.rs
crates/signinum-tilecodec/: Cargo.toml  README.md
crates/signinum-tilecodec/benches/: compare.rs
crates/signinum-tilecodec/examples/: decompress.rs
crates/signinum-tilecodec/fuzz/: Cargo.toml
crates/signinum-tilecodec/src/: bounded.rs  deflate.rs  error.rs  lib.rs  lzw.rs  pool.rs  uncompressed.rs  zstd_codec.rs
crates/signinum-tilecodec/tests/: decompress.rs
crates/signinum/benches/: facade.rs
crates/signinum/src/: lib.rs
crates/slidecodec-cli/: Cargo.toml
crates/slidecodec-core/: Cargo.toml
crates/slidecodec-j2k/: Cargo.toml
crates/slidecodec-j2k-cuda/: Cargo.toml
crates/slidecodec-j2k-metal/: Cargo.toml
crates/slidecodec-j2k-native/: Cargo.toml
docs/: bench.md  (+5 more)
(+346 files in other folders)
