[workspace]
resolver = "2"
members = [
    "crates/ashlar-core",
    "crates/ashlar-j2k-compare",
    "crates/ashlar-j2k-native",
    "crates/ashlar-j2k",
    "crates/ashlar-j2k-cuda",
    "crates/ashlar-j2k-metal",
    "crates/ashlar-jpeg",
    "crates/ashlar-jpeg-cuda",
    "crates/ashlar-jpeg-metal",
    "crates/ashlar-tilecodec",
    "crates/ashlar-cli",
    "xtask",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.94"
license      = "Apache-2.0"
repository   = "https://github.com/jcwal1516/ashlar"
homepage     = "https://github.com/jcwal1516/ashlar"
keywords     = ["pathology", "wsi", "jpeg", "jpeg2000", "tiff"]
categories   = ["multimedia::images"]

[workspace.dependencies]
thiserror = { version = "2", default-features = false }
proptest  = { version = "1" }
criterion = { version = "0.5", default-features = false }
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
zstd = { version = "0.13" }
weezl = { version = "0.1" }

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
opt-level     = 3

[profile.release-bench]
inherits  = "release"
debug     = true
strip     = "none"
