[workspace]
resolver = "2"
members = [
    "crates/signinum",
    "crates/signinum-core",
    "crates/signinum-cuda-runtime",
    "crates/signinum-profile",
    "crates/signinum-j2k-compare",
    "crates/signinum-j2k-native",
    "crates/signinum-j2k",
    "crates/signinum-j2k-cuda",
    "crates/signinum-j2k-metal",
    "crates/signinum-jpeg",
    "crates/signinum-jpeg-cuda",
    "crates/signinum-jpeg-metal",
    "crates/signinum-tilecodec",
    "crates/signinum-cli",
    "xtask",
]

[workspace.package]
version      = "0.4.1"
edition      = "2021"
rust-version = "1.94"
license      = "Apache-2.0"
repository   = "https://github.com/frames-sg/signinum"
homepage     = "https://github.com/frames-sg/signinum"
keywords     = ["pathology", "wsi", "jpeg", "jpeg2000", "tiff"]
categories   = ["multimedia::images"]

[workspace.dependencies]
thiserror = { version = "2", default-features = false }
proptest  = { version = "1" }
criterion = { version = "0.5", default-features = false }
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
zstd = { version = "0.13" }
weezl = { version = "0.1" }
libloading = "0.8"

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
opt-level     = 3

[profile.release-bench]
inherits  = "release"
debug     = true
strip     = "none"
