[package]
name        = "ashlar-core"
description = "Shared decode contracts and types for ashlar"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true

[lib]
name = "ashlar_core"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
type_complexity         = "allow"
needless_lifetimes      = "allow"
