[package]
name = "ashlar-j2k-cuda"
description = "CUDA device-output adapter for ashlar-j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ashlar_j2k_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = []

[dependencies]
ashlar-core = { path = "../ashlar-core", version = "=0.1.0" }
ashlar-j2k = { path = "../ashlar-j2k", version = "=0.1.0" }
ashlar-j2k-native = { path = "../ashlar-j2k-native", version = "=0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
ashlar-j2k-native = { path = "../ashlar-j2k-native", version = "=0.1.0" }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
