[package]
name        = "ashlar-j2k"
description = "JPEG 2000 inspector and decoder for whole-slide images"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true

[lib]
name = "ashlar_j2k"
path = "src/lib.rs"

[dependencies]
ashlar-core = { path = "../ashlar-core", version = "=0.1.0" }
ashlar-j2k-native = { path = "../ashlar-j2k-native", version = "=0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
ashlar-j2k-compare = { path = "../ashlar-j2k-compare", version = "=0.1.0" }
ashlar-j2k-native = { path = "../ashlar-j2k-native", version = "=0.1.0" }

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_possible_wrap      = "allow"
doc_markdown            = "allow"
