[package]
name = "ashlar-jpeg-metal"
description = "Metal device-output adapter for ashlar-jpeg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ashlar_jpeg_metal"
path = "src/lib.rs"

[dependencies]
ashlar-core = { path = "../ashlar-core", version = "=0.1.0" }
ashlar-jpeg = { path = "../ashlar-jpeg", version = "=0.1.0" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "device_upload"
harness = false

[[bench]]
name = "compare"
harness = false

[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
