[package]
name = "signinum-cuda-runtime"
description = "CUDA Driver API runtime helpers for signinum device adapters"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "signinum_cuda_runtime"
path = "src/lib.rs"

[dependencies]
libloading = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
