[package]
name = "signinum-j2k-metal"
description = "Metal device-output adapter for signinum-j2k"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "signinum_j2k_metal"
path = "src/lib.rs"

[dependencies]
signinum-core = { path = "../signinum-core", version = "=1.0.1" }
signinum-j2k = { path = "../signinum-j2k", version = "=1.2.2" }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.3.4" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
metal = "0.31"
rayon = "1"

[dev-dependencies]
criterion = { workspace = true }
rayon = "1"
signinum-j2k-compare = { path = "../signinum-j2k-compare" }

[[bench]]
name = "device_upload"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "encode_stages"
harness = false

[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
doc_markdown = "allow"
