[package]
name        = "signinum-j2k"
description = "JPEG 2000 inspector and decoder for whole-slide images"
version = "1.1.1"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[lib]
name = "signinum_j2k"
path = "src/lib.rs"

[dependencies]
signinum-core = { path = "../signinum-core", version = "=1.0.1" }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.3.1" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.3.1" }

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_possible_wrap      = "allow"
doc_markdown            = "allow"
