[package]
name = "signinum-jpeg-metal"
description = "Metal device-output adapter for signinum-jpeg"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "signinum_jpeg_metal"
path = "src/lib.rs"

[dependencies]
signinum-core = { path = "../signinum-core", version = "=1.0.1" }
signinum-jpeg = { path = "../signinum-jpeg", version = "=1.0.1" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"

[dev-dependencies]
criterion = { workspace = true }
jpeg-encoder = "0.7.0"
jpeg-decoder = { version = "0.3.2", default-features = false }

[[bench]]
name = "device_upload"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "encode_baseline"
harness = false

[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
