[package]
name = "signinum-profile"
description = "Internal profiling helpers for signinum crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "signinum_profile"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
