[package]
name        = "signinum-tilecodec"
description = "Tile decompression codecs for pathology image containers"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[lib]
name = "signinum_tilecodec"
path = "src/lib.rs"

[dependencies]
signinum-core = { path = "../signinum-core", version = "=1.0.0" }
thiserror = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
weezl = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "compare"
harness = false

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_possible_wrap      = "allow"
doc_markdown            = "allow"
