[package]
name = "signinum"
description = "Facade crate for signinum pathology image codecs"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "signinum"
path = "src/lib.rs"

[features]
default = ["metal"]
gpu = ["metal", "cuda"]
metal = ["dep:signinum-jpeg-metal", "dep:signinum-j2k-metal"]
cuda = ["dep:signinum-jpeg-cuda", "dep:signinum-j2k-cuda"]

[dependencies]
signinum-core = { path = "../signinum-core", version = "=0.4.2" }
signinum-jpeg = { path = "../signinum-jpeg", version = "=0.4.2" }
signinum-j2k = { path = "../signinum-j2k", version = "=0.4.2" }
signinum-tilecodec = { path = "../signinum-tilecodec", version = "=0.4.2" }
signinum-jpeg-metal = { path = "../signinum-jpeg-metal", version = "=0.4.2", optional = true }
signinum-j2k-metal = { path = "../signinum-j2k-metal", version = "=0.4.2", optional = true }
signinum-jpeg-cuda = { path = "../signinum-jpeg-cuda", version = "=0.4.2", optional = true }
signinum-j2k-cuda = { path = "../signinum-j2k-cuda", version = "=0.4.2", optional = true }

[dev-dependencies]
criterion = { workspace = true }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.4.2" }
signinum-test-support = { path = "../signinum-test-support" }

[[bench]]
name = "facade"
harness = false

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
