[package]
name        = "slidecodec-core"
description = "Shared decode contracts and types for slidecodec"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lib]
name = "slidecodec_core"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
type_complexity         = "allow"
needless_lifetimes      = "allow"
