[package]
name = "slidecodec-j2k-metal"
description = "Metal device-output adapter for slidecodec-j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "slidecodec_j2k_metal"
path = "src/lib.rs"

[dependencies]
slidecodec-core = { path = "../slidecodec-core", version = "0.0.0" }
slidecodec-j2k = { path = "../slidecodec-j2k", version = "0.0.0" }
slidecodec-j2k-native = { path = "../slidecodec-j2k-native", version = "0.0.0" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "device_upload"
harness = false

[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
