[package]
name = "slidecodec-j2k-native"
description = "Internal pure-Rust JPEG 2000 codec engine for slidecodec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["std", "simd"]
logging = ["dep:log"]
simd = ["fearless_simd", "std"]
std = []

[lib]
name = "slidecodec_j2k_native"
path = "src/lib.rs"

[dependencies]
fearless_simd = { version = "0.3.0", optional = true }
log = { version = "0.4", optional = true }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"
